# Groucho_the_Hunter

./: .dockerignore  .gitignore  .kilocodemodes  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  nginx.conf  package-lock.json  package.json  vite.config.js
.kilocode/: mcp.json
.kilocode/aiconfig/: Get OpenAI Proxy Creds.md
.kilocode/prompts/: Create Brief.md  Create Security Assessment.md
.kilocode/rules/: coding-standards.md  docker-workflow.md  execution-policy.md  game-architecture.md  git-workflow.md  mcp-usage.md  testing-qa.md  threejs-patterns.md
.kilocode/rules/memory-bank/: architecture.md  brief.md  context.md  product.md  tech.md
Docs/: ImplementationPlan.md  StoryBoard.md  TechnicalDesign.md  research.md
Docs/AI/: prompt.md
grouchocli/: README.md  __init__.py  chrome_manager.py  config.py  docker_manager.py  game_manager.py  gui.py  main.py  pyproject.toml  setup.sh  tui.py  utils.py
src/: index.html  main.js  style.css
src/core/: Game.js  GameLoop.js  Renderer.js  SceneManager.js
src/player/: Movement.js
src/systems/: CollisionSystem.js  InputManager.js  PerformanceMonitor.js  PlayerController.js
src/ui/: LoadingScreen.js
src/utils/: Constants.js  EventBus.js
src/world/levels/: TestLevel.js
